array.island.Island.scala.error
Erreur de compilation :
Island:3: error: not found: value Count
  for (i<-1 to (Count(num)-1)) {if ((apply (i-1))<(apply(i))) {x=x+1}}; return(x) 
                ^Island:3: error: not found: value apply
  for (i<-1 to (Count(num)-1)) {if ((apply (i-1))<(apply(i))) {x=x+1}}; return(x) 
                                     ^Island:3: error: not found: value apply
  for (i<-1 to (Count(num)-1)) {if ((apply (i-1))<(apply(i))) {x=x+1}}; return(x) 
                                                   ^