array.island.Island.scala.code
def island(num:Array[Int]): Int = {var x:Int=0
  for (i<-1 to (Count(num)-1)) {if ((apply (i-1))<(apply(i))) {x=x+1}}; return(x) 
}